--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -37,11 +37,11 @@ hr {
     border-radius: 10px;
     height: 1.5em;
     text-align: center;
-    box-shadow: 5px 5px 3px #888888;
+    box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
 }
 
 #submitButton {
-    box-shadow: 3px 3px 1px #888888;
+    box-shadow: 3px 3px 1px rgba(0,0,0,0.5);
     
 }
 
@@ -70,7 +70,7 @@ hr {
     margin: 5px 2%;
     border-radius: 10px;
     border: 1px solid black;
-    box-shadow: 5px 5px 3px #888888;
+    box-shadow: 5px 5px 3px rgba(0,0,0,0.5);
 }
 
 .taskCheckBox {
